fixed some alignment issues with the contact bubbles. Still a little glitchy on different display devices. More tweaking needed all around. Begun gathering assets for new pages, created new pages, and fixed CSS glitch where the screen height was blank on artifact page.

--- a/styles.sass
+++ b/styles.sass
@@ -427,6 +427,13 @@ section
         width: 80%
         margin-left: 10% 
         table-layout: fixed
+    .containFlex
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-around
+        align-items: center
+        width: 80%
+        margin-left: 10%
         
     .rbox
         position: relative
@@ -538,13 +545,13 @@ footer
     float: left
     background-color: white
     text-align: center
-    
+     
 
 // This is the Artifact pages exclusive CSS code
 .artifactheader
     text-align: center
     padding-top: 40px
-    
+    height: auto
 .artifactsection
     margin-top: 100px
     a
